<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ContactUs">

    <ImageButton
        android:id="@+id/backBttnContactUs"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_roundback"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="115dp"
        android:gravity="center"
        android:text="Contact Us"
        android:textColor="#1975AE"
        android:textSize="21sp"
        android:textStyle="bold"/>


    <ScrollView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:textSize="16dp"
        android:text="@string/contactusInfo"/>


    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:padding="12dp"
        android:background="@drawable/corner_solidgray"
        android:elevation="10dp">


        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="Main Office:"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:text=" 0505 Purok 2, Looban, Santa Elena, Hagonoy, Bulacan"
            android:textSize="15sp"
            android:textColor="#000000" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="98dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:text="Palapat Office:"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="125dp"
            android:text="@string/palapatofficeAddress"
            android:textSize="15sp"
            android:textColor="#000000" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="210dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="210dp"
            android:text="Contact Numbers:"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="235dp"
            android:text="0947-898-0649, 0947-898-0690, 0968-856-6745"
            android:textSize="15sp"
            android:textColor="#000000"/>


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/ic_email">

        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="290dp"
            android:text="Email:"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="310dp"
            android:text="onekonekinternet@gmail.com"
            android:textSize="15sp"
            android:textColor="#000000"/>


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="360dp"
            android:background="@drawable/ic_facebook">

        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="360dp"
            android:text="Facebook Page:"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="380dp"
            android:text="facebook.com/onekonek"
            android:textSize="15sp"
            android:textColor="#000000" />

    </FrameLayout>


<!-- ABOUT US-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="About Us"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textSize="14dp"
        android:gravity="left"
        android:text="@string/aboutus" />

<!-- OUR VISION -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="Our Vision"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/vision" />


<!-- OUR MISSION -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="Our Mission"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/mission" />

<!-- Additional Services -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="Additional Services"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/cctvinstallationservices" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/publicaddresssystem" />


        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/computerandprinterrepair" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/documentprintingservices" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/cashincashout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="FREE INTERNET CONNECTION"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/freeinternetconnection"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="Why Choose ONE-KONEK?"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/whychooseonekonek"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="Customer-Centered Technical Support"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:gravity="left"
            android:text="@string/costumercenteredtechsupport"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
